--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
               </form>
             </div>
             <div id="question_validation_" class="question_validation">
+              <input id="button_" type="button" value="Confirmer">
             </div>
           </div>
           <p></p>
@@ -55,6 +56,13 @@
       <div id="side_tab"  class="information_block">
         <p>Hello World</p>
       </div><!--side_tab-->
+
+      <div class="">
+        <div class="">
+          <p>Cliquez sur "Envoyer" pour enregistrer vos résultats.</p>
+        </div>
+        <input type="submit" value="Envoyer">
+      </div>
 
     </div><!-- content -->
 
